# rust_api_send_message_telegram

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.ambiente  README.md  entrypoint.sh
src/: main.rs
